{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 28,
  "lineage": "bbf5e4a3-b06f-4329-2e25-2a6ce9f777d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ansible-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:network-interface/eni-00118f047d933142d",
            "attachment": [
              {
                "attachment_id": "eni-attach-070cfc0055ae0af2a",
                "device_index": 1,
                "instance": "i-0b6151b49430a3bf8"
              }
            ],
            "id": "eni-00118f047d933142d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f6:22:b9:93:2f",
            "owner_id": "808397474139",
            "private_dns_name": "ip-10-240-5-44.ec2.internal",
            "private_ip": "10.240.5.44",
            "private_ip_list": [
              "10.240.5.44"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.240.5.44"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0020026bf4ce88c8e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09beacc5f70062dc3"
          },
          "dependencies": [
            "aws_key_pair.deploy",
            "module.ansible.aws_instance.this",
            "module.ansible.aws_spot_instance_request.this",
            "module.ansible_security_group.aws_security_group.this",
            "module.ansible_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jumpbox-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:network-interface/eni-002a63520d53591df",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c513df78695f5e03",
                "device_index": 1,
                "instance": "i-03ba7b7496f881041"
              }
            ],
            "id": "eni-002a63520d53591df",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f5:5a:cb:d6:4b",
            "owner_id": "808397474139",
            "private_dns_name": "ip-10-240-5-54.ec2.internal",
            "private_ip": "10.240.5.54",
            "private_ip_list": [
              "10.240.5.54"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.240.5.54"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01dc623eaccf3caa6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09beacc5f70062dc3"
          },
          "dependencies": [
            "aws_key_pair.deploy",
            "module.jumpbox.aws_instance.this",
            "module.jumpbox.aws_spot_instance_request.this",
            "module.jumpbox_security_group.aws_security_group.this",
            "module.jumpbox_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b996646377b6619",
            "arn": "arn:aws:ec2:us-east-1:808397474139:instance/i-0b6151b49430a3bf8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6151b49430a3bf8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Key-Pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089b630b576a7db0d",
            "private_dns": "ip-10-240-5-53.ec2.internal",
            "private_ip": "10.240.5.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f18cf8ab642892e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09beacc5f70062dc3",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000.manage.ansible",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000.manage.ansible",
              "Terraform": "true",
              "app": "manage"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "cst1000.manage.ansible"
            },
            "vpc_security_group_ids": [
              "sg-0020026bf4ce88c8e"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploy",
            "module.ansible_security_group.aws_security_group.this",
            "module.ansible_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ansible_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:security-group/sg-0020026bf4ce88c8e",
            "description": "security group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0020026bf4ce88c8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-security-group-20220302150258575700000002",
            "name_prefix": "ansible-security-group-",
            "owner_id": "808397474139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "cst1000",
              "Name": "ansible-security-group",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "ansible-security-group",
              "Terraform": "true",
              "app": "manage"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ae81321fb7032b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ansible_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound",
            "from_port": 0,
            "id": "sgrule-616768854",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0020026bf4ce88c8e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ansible_security_group.aws_security_group.this",
            "module.ansible_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ansible_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-3770159146",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0020026bf4ce88c8e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ansible_security_group.aws_security_group.this",
            "module.ansible_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b996646377b6619",
            "arn": "arn:aws:ec2:us-east-1:808397474139:instance/i-03ba7b7496f881041",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ba7b7496f881041",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Key-Pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04060a7e060a3ecae",
            "private_dns": "ip-10-240-4-100.ec2.internal",
            "private_ip": "10.240.4.100",
            "public_dns": "ec2-44-192-63-129.compute-1.amazonaws.com",
            "public_ip": "44.192.63.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06356b091ddb75847",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bef8f06075dcd82b",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000.manage.jumpbox",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000.manage.jumpbox",
              "Terraform": "true",
              "app": "manage"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "cst1000.manage.jumpbox"
            },
            "vpc_security_group_ids": [
              "sg-01dc623eaccf3caa6"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploy",
            "module.jumpbox_security_group.aws_security_group.this",
            "module.jumpbox_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jumpbox_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:security-group/sg-01dc623eaccf3caa6",
            "description": "security group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dc623eaccf3caa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jumpbox-security-group-20220302150258575600000001",
            "name_prefix": "jumpbox-security-group-",
            "owner_id": "808397474139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "cst1000",
              "Name": "jumpbox-security-group",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "jumpbox-security-group",
              "Terraform": "true",
              "app": "manage"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ae81321fb7032b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jumpbox_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound",
            "from_port": 0,
            "id": "sgrule-2844620227",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01dc623eaccf3caa6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jumpbox_security_group.aws_security_group.this",
            "module.jumpbox_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jumpbox_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-3626589239",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01dc623eaccf3caa6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jumpbox_security_group.aws_security_group.this",
            "module.jumpbox_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089a9b8a701192d4c",
            "association_id": "eipassoc-09991485489cda827",
            "domain": "vpc",
            "id": "eipalloc-089a9b8a701192d4c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f2f227b2623c222e",
            "private_dns": "ip-10-240-4-86.ec2.internal",
            "private_ip": "10.240.4.86",
            "public_dns": "ec2-35-170-172-254.compute-1.amazonaws.com",
            "public_ip": "35.170.172.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:internet-gateway/igw-0bc3811bc3aa868df",
            "id": "igw-0bc3811bc3aa868df",
            "owner_id": "808397474139",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000",
              "Terraform": "true",
              "app": "manage"
            },
            "vpc_id": "vpc-0ae81321fb7032b2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089a9b8a701192d4c",
            "connectivity_type": "public",
            "id": "nat-04268a55fbaf0d3d1",
            "network_interface_id": "eni-0f2f227b2623c222e",
            "private_ip": "10.240.4.86",
            "public_ip": "35.170.172.254",
            "subnet_id": "subnet-0bef8f06075dcd82b",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ab60e9c1682180231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04268a55fbaf0d3d1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab60e9c168218023",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bc3811bc3aa868df",
            "id": "r-rtb-09b304d2766724d0f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b304d2766724d0f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:route-table/rtb-0ab60e9c168218023",
            "id": "rtb-0ab60e9c168218023",
            "owner_id": "808397474139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04268a55fbaf0d3d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000-private-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000-private-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae81321fb7032b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:route-table/rtb-09b304d2766724d0f",
            "id": "rtb-09b304d2766724d0f",
            "owner_id": "808397474139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc3811bc3aa868df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000-public",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000-public",
              "Terraform": "true",
              "app": "manage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae81321fb7032b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f3afaecdb216e65",
            "route_table_id": "rtb-0ab60e9c168218023",
            "subnet_id": "subnet-09beacc5f70062dc3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03624d355aa7da125",
            "route_table_id": "rtb-09b304d2766724d0f",
            "subnet_id": "subnet-0bef8f06075dcd82b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:subnet/subnet-09beacc5f70062dc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.240.5.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09beacc5f70062dc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808397474139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000-private-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000-private-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "vpc_id": "vpc-0ae81321fb7032b2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:subnet/subnet-0bef8f06075dcd82b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.240.4.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bef8f06075dcd82b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808397474139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000-public-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000-public-us-east-1a",
              "Terraform": "true",
              "app": "manage"
            },
            "vpc_id": "vpc-0ae81321fb7032b2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808397474139:vpc/vpc-0ae81321fb7032b2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.240.4.0/23",
            "default_network_acl_id": "acl-0f14108e621da8986",
            "default_route_table_id": "rtb-09c5bc614839f266a",
            "default_security_group_id": "sg-0b53f3e78f3ed0d07",
            "dhcp_options_id": "dopt-067f87be1038d90d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ae81321fb7032b2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c5bc614839f266a",
            "owner_id": "808397474139",
            "tags": {
              "Environment": "cst1000",
              "Name": "cst1000",
              "Terraform": "true",
              "app": "manage"
            },
            "tags_all": {
              "Environment": "cst1000",
              "Name": "cst1000",
              "Terraform": "true",
              "app": "manage"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}